test/Analysis/interval_analysis/interval_analysis_diagnostics.llzk
// RUN: llzk-opt -split-input-file -verify-diagnostics -llzk-print-interval-analysis %s 2>&1

// expected-warning@+1{{circuit does not support field "bn128", so analysis results may be inaccurate. Supported fields: [ koalabear ]}}
module attributes {llzk.lang, llzk.fields = "koalabear"} { }

// -----

// expected-warning@+1{{circuit does not support field "bn128", so analysis results may be inaccurate. Supported fields: [ babybear, mersenne31 ]}}
module attributes {llzk.lang, llzk.fields = ["babybear", "mersenne31"]} { }

// -----

// expected-error@+1{{IntervalAnalysisPrinterPass error: could not parse "llzk.fields" attribute}}
module attributes {llzk.lang, llzk.fields = ["moo"]} { }

// -----

// expected-error@+1{{IntervalAnalysisPrinterPass error: could not parse "llzk.fields" attribute}}
module attributes {llzk.lang, llzk.fields = [["bn128"], ["babybear"]]} { }
